--- a/index.html
+++ b/index.html
@@ -1,10 +1,130 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Bootstrap 101 Template</title>
+
+  <!-- Bootstrap -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Style.css -->
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
+
 <body>
-	<h1>Портфолио</h1>
+
+<!-- ******************************************* -->
+<!-- *                                         * -->
+<!-- *                  header                 * -->
+<!-- *                                         * -->
+<!-- ******************************************* -->
+
+<header>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <p>Портфолио</p>
+      </div><!-- /.col-xs-12 -->
+    </div><!-- /.row -->
+  </div><!-- /.container -->
+</header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- ******************************************* -->
+<!-- *                                         * -->
+<!-- *                 section                 * --> 
+<!-- *                                         * -->
+<!-- ******************************************* -->
+
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="item">
+          <img src="img/macbook-mock-dribbble.png" alt="mockup smart agensy" class="img-responsive" width="1788" height="994">
+          <a href="">Перейти на сайт</a>
+        </div><!-- /.item -->
+      </div><!-- /.col-sm-4 -->
+
+      <div class="col-sm-4">
+        <div class="item">
+          <img src="img/macbook-mock-dribbble.png" alt="mockup smart agensy" class="img-responsive" width="1788" height="994">
+          <a href="">Перейти на сайт</a>
+        </div><!-- /.item -->
+      </div><!-- /.col-sm-4 -->
+      
+      <div class="col-sm-4">
+        <div class="item">
+          <img src="img/macbook-mock-dribbble.png" alt="mockup smart agensy" class="img-responsive" width="1788" height="994">
+          <a href="">Перейти на сайт</a>
+        </div><!-- /.item -->
+      </div><!-- /.col-sm-4 -->
+    </div><!-- /.row -->
+  </div><!-- /.container -->
+</section>
+
+
+
+
+
+
+
+
+
+
+
+<!-- ******************************************* -->
+<!-- *                                         * -->
+<!-- *                 footer                  * --> 
+<!-- *                                         * -->
+<!-- ******************************************* -->
+
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        
+      </div><!-- /.col-xs-12 -->
+    </div><!-- /.row -->
+  </div><!-- /.container -->
+</footer>
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/bootstrap.min.js"></script>
+
 </body>
 </html>
