Айнар доработал сайт-портфолио

--- a/index.html
+++ b/index.html
@@ -60,21 +60,21 @@
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-sm-4">
+      <div class="col-sm-6 col-lg-4">
+        <div class="item">
+          <img src="img/macbook-mock-dribbble.png" alt="mockup smart agensy" class="img-responsive" width="1349" height="631">
+          <a href="">Перейти на сайт</a>
+        </div><!-- /.item -->
+      </div><!-- /.col-sm-4 -->
+
+      <div class="col-sm-6 col-lg-4">
         <div class="item">
           <img src="img/macbook-mock-dribbble.png" alt="mockup smart agensy" class="img-responsive" width="1788" height="994">
           <a href="">Перейти на сайт</a>
         </div><!-- /.item -->
       </div><!-- /.col-sm-4 -->
 
-      <div class="col-sm-4">
-        <div class="item">
-          <img src="img/macbook-mock-dribbble.png" alt="mockup smart agensy" class="img-responsive" width="1788" height="994">
-          <a href="">Перейти на сайт</a>
-        </div><!-- /.item -->
-      </div><!-- /.col-sm-4 -->
-      
-      <div class="col-sm-4">
+      <div class="col-sm-6 col-lg-4">
         <div class="item">
           <img src="img/macbook-mock-dribbble.png" alt="mockup smart agensy" class="img-responsive" width="1788" height="994">
           <a href="">Перейти на сайт</a>
