--- a/index.html
+++ b/index.html
@@ -57,32 +57,32 @@
 <!-- *                                         * -->
 <!-- ******************************************* -->
 
-<section>
+<main>
   <div class="container">
     <div class="row">
-      <div class="col-sm-6 col-lg-4">
+      <div class="col-sm-6 col-md-4">
         <div class="item">
-          <img src="img/macbook-mock-dribbble.png" alt="mockup smart agensy" class="img-responsive" width="1349" height="631">
+          <img src="img/mockup-Smart-Agency.png" alt="mockup smart agensy" class="img-responsive" width="358" height="232">
+          <a href="Smart Agency/index.html">Перейти на сайт</a>
+        </div><!-- /.item -->
+      </div><!-- /.col-sm-4 -->
+
+      <div class="col-sm-6 col-md-4">
+        <div class="item">
+          <img src="img/mockup-Smart-Agency.png" alt="mockup smart agensy" class="img-responsive" width="358" height="232">
           <a href="">Перейти на сайт</a>
         </div><!-- /.item -->
       </div><!-- /.col-sm-4 -->
 
-      <div class="col-sm-6 col-lg-4">
+      <div class="col-sm-6 col-md-4">
         <div class="item">
-          <img src="img/macbook-mock-dribbble.png" alt="mockup smart agensy" class="img-responsive" width="1788" height="994">
-          <a href="">Перейти на сайт</a>
-        </div><!-- /.item -->
-      </div><!-- /.col-sm-4 -->
-
-      <div class="col-sm-6 col-lg-4">
-        <div class="item">
-          <img src="img/macbook-mock-dribbble.png" alt="mockup smart agensy" class="img-responsive" width="1788" height="994">
+          <img src="img/mockup-Smart-Agency.png" alt="mockup smart agensy" class="img-responsive" width="358" height="232">
           <a href="">Перейти на сайт</a>
         </div><!-- /.item -->
       </div><!-- /.col-sm-4 -->
     </div><!-- /.row -->
   </div><!-- /.container -->
-</section>
+</main>
 
 
 
