Айнар доработал проекты Smart Agency and Hotel-deluxe

--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
     <div class="row">
       <div class="col-sm-6 col-md-4">
         <div class="item">
-          <img src="img/mockup-Smart-Agency.png" alt="mockup smart agensy" class="img-responsive" width="358" height="232">
+          <img src="img/mockup-Smart-Agency.png" alt="mockup smart agensy" class="img-responsive" width="300">
           <a href="Smart Agency/index.html">Перейти на сайт</a>
         </div><!-- /.item -->
       </div><!-- /.col-sm-4 -->
 
       <div class="col-sm-6 col-md-4">
         <div class="item">
-          <img src="img/mockup-Smart-Agency.png" alt="mockup smart agensy" class="img-responsive" width="358" height="232">
-          <a href="">Перейти на сайт</a>
+          <img src="img/mockup-Hotel-deluxe.png" alt="mockup smart agensy" class="img-responsive" width="300">
+          <a href="Hotel-deluxe/index.html">Перейти на сайт</a>
         </div><!-- /.item -->
       </div><!-- /.col-sm-4 -->
 
       <div class="col-sm-6 col-md-4">
         <div class="item">
-          <img src="img/mockup-Smart-Agency.png" alt="mockup smart agensy" class="img-responsive" width="358" height="232">
+          <img src="img/mockup-скоро.png" alt="mockup smart agensy" class="img-responsive" width="300">
           <a href="">Перейти на сайт</a>
         </div><!-- /.item -->
       </div><!-- /.col-sm-4 -->
