--- a/Hotel-deluxe/index.html
+++ b/Hotel-deluxe/index.html
@@ -82,6 +82,9 @@
           </form>          
         </div><!-- /.row -->
       </div><!-- /.container -->
+
+      <!-- кнопка На главную -->
+      <a href="https://ainar2017.github.io/index.html" class="home-btn"><img src="на главную.png" alt="на главную"></a>
     </header>
 
 
