--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="col-sm-6 col-md-4">
         <div class="item">
           <img src="img/mockup-скоро.png" alt="mockup smart agensy" class="img-responsive" width="300">
-          <a href="">Перейти на сайт</a>
+          <a href="https://ainar2017.github.io/robo-class/index.html">Перейти на сайт</a>
         </div><!-- /.item -->
       </div><!-- /.col-sm-4 -->
     </div><!-- /.row -->
