Айнар добавил сайт Styletour

--- a/Hotel-deluxe/index.html
+++ b/Hotel-deluxe/index.html
@@ -37,6 +37,10 @@
     <!-- ******************************************* -->
 
     <header>
+
+      <!-- кнопка На главную -->
+      <a href="https://ainar2017.github.io/index.html" class="home-btn">На главную</a>
+
       <div class="logo">
         <div class="container">
           <h1>HOTEL<span>DELUXE</span></h1>
@@ -82,9 +86,6 @@
           </form>          
         </div><!-- /.row -->
       </div><!-- /.container -->
-
-      <!-- кнопка На главную -->
-      <a href="https://ainar2017.github.io/index.html" class="home-btn"><img src="на главную.png" alt="на главную"></a>
     </header>
 
 
