--- a/Robo-class/index.html
+++ b/Robo-class/index.html
@@ -41,6 +41,11 @@
 
   </div><!-- /.container -->
 
+  <!-- кнопка На главную -->
+  <a href="https://ainar2017.github.io/index.html" class="home-btn"><img src="на главную.png" alt="на главную"></a>
+
+  <!-- кнопка На главную -->
+  <a href="https://ainar2017.github.io/index.html" class="home-btn1">На главную</a>
 
 </header>
 
