--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <div class="col-sm-6 col-md-4">
         <div class="item">
           <img src="img/mockup-Smart-Agency.png" alt="mockup smart agensy" class="img-responsive" width="300">
+          <p>Лендинг Digital-агентства</p>
           <a href="Smart Agency/index.html">Перейти на сайт</a>
         </div><!-- /.item -->
       </div><!-- /.col-sm-4 -->
@@ -70,14 +71,16 @@
       <div class="col-sm-6 col-md-4">
         <div class="item">
           <img src="img/mockup-Hotel-deluxe.png" alt="mockup smart agensy" class="img-responsive" width="300">
+          <p>Сайт отеля HotelDeluxe</p>
           <a href="Hotel-deluxe/index.html">Перейти на сайт</a>
         </div><!-- /.item -->
       </div><!-- /.col-sm-4 -->
 
       <div class="col-sm-6 col-md-4">
         <div class="item">
-          <img src="img/mockup-скоро.png" alt="mockup smart agensy" class="img-responsive" width="300">
-          <a href="https://ainar2017.github.io/Robo-class/index.html">Перейти на сайт</a>
+          <img src="img/mockup-styletour.png" alt="mockup smart agensy" class="img-responsive" width="300">
+          <p>Интернет-магазин женской одежды</p>
+          <a href="https://ainar2017.github.io/styletour/index.html">Перейти на сайт</a>
         </div><!-- /.item -->
       </div><!-- /.col-sm-4 -->
     </div><!-- /.row -->
