Айнар внес изменения на сайте Робо-класс

--- a/Robo-class/index.html
+++ b/Robo-class/index.html
@@ -37,17 +37,10 @@
         <p><i>Всё лучшее детям!</i></p>
       <!-- </div>/.col-xs-12 -->
     <!-- </div>/.row -->
-
-
   </div><!-- /.container -->
-
-  <!-- кнопка На главную -->
-  <a href="https://ainar2017.github.io/index.html" class="home-btn"><img src="на главную.png" alt="на главную"></a>
-
-  <!-- кнопка На главную -->
-  <a href="https://ainar2017.github.io/index.html" class="home-btn1">На главную</a>
-
 </header>
+
+
 
 <nav class="main-menu">
   <div class="container">
@@ -65,6 +58,14 @@
   <div class="row">
     <div class="col-sm-3">
       <aside>
+        <!-- Nav tabs -->
+        <ul class="nav nav-tabs nav-pills nav-stacked" role="tablist">
+          <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Главная</a></li>
+          <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Конструирование</a></li>
+          <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Электроника</a></li>
+          <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Программирование</a></li>
+        </ul>
+
         <nav class="left-menu">
           <a href="#">Кружок 1</a>
           <a href="#">Кружок 2</a>
@@ -72,16 +73,7 @@
           <a href="#">Кружок 4</a>
           <a href="#">Кружок 5</a>
           <a href="#">Кружок 6</a>
-        </nav>
-
-        <!-- Nav tabs -->
-          <ul class="nav nav-tabs nav-pills nav-stacked" role="tablist">
-            <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Главная</a></li>
-            <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Конструирование</a></li>
-            <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Электроника</a></li>
-            <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Программирование</a></li>
-          </ul>
-         
+        </nav>         
       </aside>
     </div><!-- /.col-sm-3 -->
 
@@ -93,7 +85,7 @@
           <div role="tabpanel" class="tab-pane active" id="home">
             <h2>О нас ...</h2>
             <img src="img/фон1.jpg" alt="foto">
-            <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Жаренные запятых речью запятой ему текста рекламных себя дорогу коварных вершину свое, большого не деревни рукопись власти, повстречался наш свой предупредила своих. Домах речью что парадигматическая, единственное рукопись подзаголовок ipsum о путь назад грамматики буквенных текст, жаренные заманивший диких, семь над которой жизни вскоре? Всеми, журчит безорфографичный lorem дорогу океана, запятых домах путь переписывается текст снова злых даже, единственное пунктуация. Продолжил запятых если дал оксмокс то своих которое которой меня всеми точках правилами переписывается домах взобравшись несколько предупреждал толку родного имеет моей ручеек, скатился ты. Маленькая знаках ему пояс языком своего, над встретил снова путь продолжил вопрос вскоре моей он щеке грамматики, необходимыми букв? Маленький предупредила правилами переписали пор меня, свою свой коварных ее алфавит, парадигматическая своего, прямо. Правилами своих на берегу реторический маленькая букв последний своих они курсивных ее вдали подпоясал дал гор живет до подзаголовок пор родного пояс, себя продолжил семантика о текст переулка. Моей сбить страну семь, скатился курсивных, текстов толку, то продолжил которой повстречался коварный решила ipsum от всех по всей переписывается домах. Рукопись великий своих необходимыми однажды, бросил подзаголовок продолжил, заголовок осталось силуэт своего знаках большой взгляд путь пор там! Агенство переписали запятой назад свой, снова вопроса которой домах обеспечивает ему строчка курсивных текста парадигматическая продолжил ipsum за, переписывается предупредила! Вопроса страну родного рыбного свою страна вершину, свой себя дорогу щеке назад предупреждал курсивных они заглавных, снова рыбными обеспечивает от всех повстречался алфавит свое, живет его. Взгляд, одна, переписали? Ручеек диких, оксмокс что это, парадигматическая приставка путь пунктуация ему вопрос однажды ее родного то, последний lorem живет, переписывается маленькая над своих бросил единственное сбить лучше сих ведущими! Города выйти сих, которой обеспечивает взобравшись даже, дал ее, переписывается дорогу курсивных которое своего пояс. Своих языкового свой продолжил запятых журчит точках великий, вопроса. Прямо послушавшись живет ручеек пор всемогущая, повстречался его.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis architecto, harum ducimus consequuntur culpa laboriosam a placeat autem ratione quo mollitia sed delectus consequatur velit repudiandae qui assumenda alias! Distinctio praesentium architecto tenetur consectetur ipsum dignissimos, quibusdam illum dolorem magni asperiores hic, nihil facere exercitationem, sit, esse officiis quasi ut aperiam ipsam provident labore. Laborum earum aliquid minima dicta optio voluptatum ab a molestias. Soluta dicta dolorem nesciunt nemo? Pariatur dolore explicabo sunt nesciunt vel voluptate vitae est, quo repudiandae, earum voluptatum cum. Quia deserunt nisi iusto odit at aut quod praesentium sunt tempora qui pariatur quas, ullam voluptas neque, nostrum doloribus dolore, sit eos laboriosam libero tempore similique. Rerum odio ad, vitae eum aperiam quia neque commodi corporis magnam. Eos obcaecati ratione quis amet, ex esse maxime nobis iste aliquid harum itaque cumque accusantium pariatur totam consectetur labore explicabo. Voluptates laboriosam praesentium corporis harum, non sequi. Perferendis iure magni quod eligendi cum impedit, voluptate unde fugit veritatis! Temporibus facere incidunt vero debitis similique alias. Ab deleniti, nam, minus error blanditiis illo nobis impedit ea voluptatibus, cumque consequuntur. Nisi libero repellendus vero ut quisquam culpa ex omnis beatae, nihil, pariatur sequi, inventore veniam dignissimos quas totam excepturi. Voluptatibus laboriosam est id nemo expedita voluptatem distinctio fugiat laborum, assumenda, iure, excepturi corrupti, vel nesciunt ea harum. Quam officia laborum adipisci at, dolorem! Quaerat atque dolores nesciunt error repellat porro quia, voluptatibus sit aperiam. Quae sequi modi ex, placeat vero impedit reiciendis iure laboriosam, alias rerum delectus. Saepe aliquid culpa nostrum, error tenetur! Rerum molestias eum quam minima eos, deleniti vero ratione cum, culpa animi voluptas odit tempora nulla temporibus sint ex reiciendis quaerat saepe? Commodi, ad! Harum sit minima commodi dolores ab saepe consequatur sapiente illo, ex voluptatem consectetur, eligendi distinctio perferendis debitis, veritatis dolorem doloremque praesentium officiis corporis reprehenderit modi!</p>
           </div>
 
           <div role="tabpanel" class="tab-pane" id="profile">
@@ -113,7 +105,7 @@
           <div role="tabpanel" class="tab-pane" id="settings">
             <h2>Программирование</h2>
             <h3>Ozobot Bit - умный и дружелюбный робот, вдохновляющий на творчество</h3>
-            <p>Откройте для вашего ребенка новые горизонты с помощью миниатюрного умного робота Ozobot. Возможностям нет предела – с Ozobot ваш ребенок создаст новую страну приключений, игр и программирования. Эта обучающая игрушка откроет ему двери в мир компьютерной науки, робототехники и программирования и поможет быть всегда на шаг впереди учебной программы – и в школе, и в жизни. С Ozobot дети получают веселый и увлекательный опыт художественного творчества, решения задач и групповых игр, который начинается с рисования фрагментов программного кода цветными маркерами. Способность робота Ozobot запоминать и выполнять созданные ребенком программы полностью меняет процессы игры и обучения. OzoBlockly – визуальный онлайн-редактор – имеет пять режимов, в которых, в зависимости от степени сложности, используются блоки команд в форме значков, блоки циклов (повторов), логические блоки и блоки уравнений. Возможности Ozoblockly будут интересны и детям, и опытным программистам. Робот Ozobot удостоен многих наград: он получил звания «Лучшая игрушка-робот 2015» по итогам конкурса KAPi Awards и «Игрушка года 2015» (TOTY) и стал победителем конкурса CES Editor's Choice 2015.</p>
+            <p>Откройте для вашего ребенка новые горизонты с помощью миниатюрного умного робота Ozobot. Возможностям нет предела – с Ozobot ваш ребенок создаст новую страну приключений, игр и программирования. Эта обучающая игрушка откроет ему двери в мир компьютерной науки, робототехники и программирования и поможет быть всегда на шаг впереди учебной программы – и в школе, и в жизни.</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/jseKz4A3RWM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
